hphp/test/zend/good/Zend/tests/traits/bug61052.php.expectf

Fatal error: Inconsistent insteadof definition. The method foo is to be used from T1, but T1 is also on the exclude list in %s/bug61052.php on line 8
